# nibterm

./: .gitignore  README.md  nibterm.spec  pyproject.toml  run.py
build_hooks/: version_hook.py
config_example/: commands.yaml  firmware_toolchains.yaml  vmm-iot-gwlogger.yaml  vmm-iot-owlogger.yaml
src/nibterm/: main.py  main_window.py  version.py
src/nibterm/config/: commands_schema.py  defaults.py  migration.py  paths.py  plot_config.py  settings_keys.py  variable.py
src/nibterm/data/: json_utils.py  parsers.py  transforms.py  variable_manager.py
src/nibterm/firmware/: firmware_registry.py  toolchain_schema.py  upload_runner.py
src/nibterm/logging/: file_logger.py
src/nibterm/mqtt/: __init__.py  manager.py  settings.py
src/nibterm/serial/: port_manager.py  settings.py
src/nibterm/ui/: clickable_display.py  command_buttons.py  command_toolbar.py  console.py  dashboard_window.py  devices_widget.py  firmware_widget.py  help_window.py  history_line_edit.py  mqtt_monitor.py  mqtt_settings_dialog.py  plot_panel.py  plot_settings_dialog.py  plot_setup_dialog.py  plot_window.py  regex_edit_dialog.py  serial_parser_dialog.py  serial_plot_panel.py  settings_dialog.py  variable_dialog.py
tests/: test_config_serialization.py  test_json_utils.py  test_transforms.py  test_variable_manager.py
